--- a/src/app/components/data-grid/data-grid.component.html
+++ b/src/app/components/data-grid/data-grid.component.html
@@ -3,10 +3,10 @@
     [ngStyle]="{
                 'width': this.width,
                 'height': this.height,
-                'marginRight': 'this.marginRight',
-                'marginTop': 'this.marginTop',
-                'margin-left': 'this.marginLeft',
-                'marginBottom': 'marginBottom'
+                'margin-right': this.marginRight,
+                'margin-top': this.marginTop,
+                'margin-left': this.marginLeft,
+                'marginBottom': this.marginBottom
             }"
     [ngClass]="{'ag-theme-balham': true,
                 'pp': true,
