--- a/src/app/views/home/stock-details/ratios-by-category/ratios-by-category.component.scss
+++ b/src/app/views/home/stock-details/ratios-by-category/ratios-by-category.component.scss
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     margin-right: 28rem;
+    height: 54rem;
 }
 
 @media only screen and (max-width: 75em) {
