--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -5,9 +5,9 @@
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
-    position: absolute;
+    // position: absolute;
     margin-top: 24rem;
-    margin-left: 47rem;
+    margin-left: -28rem;
 }
 
 @keyframes spin {
