--- a/src/app/components/data-grid/data-grid.component.scss
+++ b/src/app/components/data-grid/data-grid.component.scss
@@ -9,9 +9,9 @@
 @media only screen and (max-width: 37.5em) {
 
     .ag-theme-balham {
-        margin-left: 18rem;
-        width: 44rem !important;
-        height: 87rem !important;
+        margin-left: 1.3rem !important;
+        width: 20rem !important;
+        height: 15rem;
         margin-bottom: 4rem;
     }
 }
