--- a/src/app/views/home/stocks/stocks.component.html
+++ b/src/app/views/home/stocks/stocks.component.html
@@ -1,18 +1,21 @@
 <div [ngClass]="'container'">
     <app-header [stockName] = "'STOCKS ANALYSIS APP  '"
                 [userName]  = "'Lisandro'"
+                [headerStyles] ="this.headerStyles"
     >
     </app-header>
     <div [ngClass]= "'main'">
         <app-collapsible-box [notifyChangeCollapsedState]="this.notifyChangeCollapsedState.bind(this)"
                             [accordionModels] = "this.accordionModels"
                             [accordionStyles] = "this.accordionStyles"
+                            [ngClass] = "'appCollapsibleBox'"
         >
         </app-collapsible-box>
 
         <app-data-grid
-                [width] ="this.isCollapsedLateralMenu ? '70rem' : '45rem'"
-                [marginLeft] = "this.isCollapsedLateralMenu ? '6rem' : '0rem'"
+                [width] = "this.dataGridStyles.width"
+                [marginLeft] = "this.dataGridStyles.marginLeft"
+                [height] = "this.dataGridStyles.height"
                 [flag] = "this.isCollapsedLateralMenu ? '1' : '0'"
                 [columnDefs]="this.activeColumns"
                 [rowData]="this.stockData"
