--- a/src/app/components/accordion-item/accordion-item.component.scss
+++ b/src/app/components/accordion-item/accordion-item.component.scss
@@ -83,3 +83,11 @@
       line-height: 1.3;
     }
   }
+
+  @media only screen and (max-width: 56.25em) {
+    .accordion_item {
+       &__title {
+          font-size: 1rem;
+       }
+    }
+  }
