--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -48,20 +48,26 @@
 
 @media only screen and (max-width: 37.5em) {
   .menu {
-          width: 45rem;
-          margin-left: 3rem;
+          width: 13.1rem;
+          margin-left: 1rem;
           align-items: center;
+          padding-left: 4.4rem;
+          height: 29rem !important;
 
           &__item {
                     border-bottom: 0.1rem solid;
                     padding-bottom: 0.1rem;
                     padding-top: 0.5rem;
+                    font-size: 1rem;
+                    width: 14rem;
 
                     &__selected {
                         border-bottom: 0.1rem solid;
                         padding-bottom: 0.1rem;
                         padding-top: 0.5rem;
                         width: 19rem;
+                        font-size: 1rem;
+                        width: 14rem;
                     }
          }
         }
