--- a/src/app/views/home/stock-details/income-statement/income-statement.component.html
+++ b/src/app/views/home/stock-details/income-statement/income-statement.component.html
@@ -14,7 +14,12 @@
                         )
                         ? this.responsiveDimentions.marginLeft
                         : '0rem'"
-        [height] = "'40rem'"
+        [height] = "
+                    ( this.responsiveDimentions != null &&
+                    this.responsiveDimentions.height
+                    )
+                    ? this.responsiveDimentions.height
+                    : '40rem'"
         [onSelectedRow] = "this.onSelectedRow.bind(this)"
     >
     </app-tree-datagrid>
