--- a/src/app/views/home/stock-details/overview/overview.component.scss
+++ b/src/app/views/home/stock-details/overview/overview.component.scss
@@ -16,6 +16,7 @@
 @media only screen and (max-width: 37.5em) {
    .container {
                background-color: #1e2337;
-               width: 49rem;
+               padding-left: 0.9rem;
+               width: 23rem;
               }
 }
