--- a/src/app/views/home/stocks/stocks.component.scss
+++ b/src/app/views/home/stocks/stocks.component.scss
@@ -27,18 +27,31 @@ $night: #34495e;
 
 @media only screen and (max-width: 56.25em) {
     .container {
-        width: 92rem;
+        width: 74rem;
+    }
+
+    .main {
+        height: 65rem;
     }
 }
 
 @media only screen and (max-width: 37.5em) {
     .main {
        flex-direction: column;
-       width: 51.8rem;
+       width: 20.8rem;
        background-color: #1E2337;
     }
 
     .container {
-        width: 54rem;
+        width: 22rem;
+    }
+
+    .appCollapsibleBox {
+        width: 22rem;
+    }
+
+    .header {
+        width: 23.1rem;
+        padding-left: 0rem;
     }
 }
