--- a/src/app/views/home/stock-details/mmm/mmm.component.scss
+++ b/src/app/views/home/stock-details/mmm/mmm.component.scss
@@ -16,5 +16,6 @@
 @media only screen and (max-width: 37.5em) {
     .container {
         background-color: #1e2337;
+        justify-content: start;
     }
 }
