--- a/src/app/views/home/stock-details/stock-details.component.scss
+++ b/src/app/views/home/stock-details/stock-details.component.scss
@@ -38,6 +38,7 @@
        flex-direction: column;
        width: 23.9rem;
        background-color: #1E2337;
+       justify-content: start;
     }
 
     .container {
