--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -62,8 +62,11 @@
 @media only screen and (max-width: 37.5em) {
     .newCard {
                margin-right: 1rem;
-               width: 9rem;
+               margin-bottom: 1rem;
+               width: 8rem;
+               height: 8rem;
                margin-left: 1.5rem;
+               box-shadow: 0rem 0rem 0.5rem rgb(205, 210, 216);
                &_header {
                    &_title {
                        font-size: 0.9rem;
